--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,19 +9,19 @@ body {
 }
 
 h1 {
-    font-size: $fontH1;
+    font-size: font-h1;
 }
 
 h2 {
-    font-size: $fontH2;
+    font-size: font-h2;
 }
 
 h3 {
-    font-size: $fontH3;
+    font-size: font-h3;
 }
 
 p {
-    font-size: $fontP;
+    font-size: font-p;
 }
 
 ul {
