--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,4 +1,4 @@
-$fontH1 : 3.5em;
-$fontH2 : 2.7em;
-$fontH3 : 2em;
-$fontP : 1.25em;
+$font-h1 : 3.5em;
+$font-h2 : 2.7em;
+$font-h3 : 2em;
+$font-p : 1.25em;
