--- a/scss/secciones/_galeria.scss
+++ b/scss/secciones/_galeria.scss
@@ -5,6 +5,7 @@
         display: flex;
         padding: 5px;
         flex-wrap: wrap;
+        align-items: flex-end;
 
         .column {
             flex: 50%;
