--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -43,8 +43,16 @@
         display: block;
     }
 
-    .column {
-        flex: 25%;
+    .galeria {
+       
+    
+        .row {
+            align-items: stretch;
+    
+            .column {
+                flex: 25%;
+            }
+        }
     }
 
 }
