--- a/css/style.css
+++ b/css/style.css
@@ -206,9 +206,9 @@ li {
     display: flex;
     padding: 5px;
     flex-wrap: wrap;
-    align-items: flex-end; }
+    align-items: stretch; }
     .galeria .row .column {
-      flex: 50%;
+      flex: 25%;
       padding: 5px; }
     .galeria .row .column img {
       margin-top: 5px; }
