--- a/scss/secciones/_galeria.scss
+++ b/scss/secciones/_galeria.scss
@@ -5,10 +5,10 @@
         display: flex;
         padding: 5px;
         flex-wrap: wrap;
-        align-items: flex-end;
+        align-items: stretch;
 
         .column {
-            flex: 50%;
+            flex: 25%;
             padding: 5px;
         }
 
