--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -40,19 +40,6 @@
     }
 
     .servicios p {
-        display: block;
-    }
-
-    .galeria {
-       
-    
-        .row {
-            align-items: stretch;
-    
-            .column {
-                flex: 25%;
-            }
-        }
-    }
+        display: block;    }
 
 }
