--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,16 @@ body {
   font-family: 'Lora', serif; }
 
 h1 {
-  font-size: font-h1; }
+  font-size: 3.5em; }
 
 h2 {
-  font-size: font-h2; }
+  font-size: 2.7em; }
 
 h3 {
-  font-size: font-h3; }
+  font-size: 2em; }
 
 p {
-  font-size: font-p; }
+  font-size: 1.25em; }
 
 ul {
   list-style: none; }
@@ -194,11 +194,7 @@ li {
     display: flex;
     justify-content: center; }
   .servicios p {
-    display: block; }
-  .galeria .row {
-    align-items: stretch; }
-    .galeria .row .column {
-      flex: 25%; } }
+    display: block; } }
 
 .galeria {
   background-color: black; }
