--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,19 +9,19 @@ body {
 }
 
 h1 {
-    font-size: font-h1;
+    font-size: 3.5em;
 }
 
 h2 {
-    font-size: font-h2;
+    font-size: 2.7em;
 }
 
 h3 {
-    font-size: font-h3;
+    font-size: 2em;
 }
 
 p {
-    font-size: font-p;
+    font-size: 1.25em;
 }
 
 ul {
